<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3F0F0"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_150sdp"
                            android:background="@drawable/gradient_theme"></RelativeLayout>

                        <TextView
                            style="@style/textStyle"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/_50sdp"
                            android:text="@string/login"
                            android:textSize="@dimen/_30sdp"></TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_100sdp"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_20sdp"
                                android:background="#ffffff">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        style="@style/textStyleSmall"
                                        android:layout_marginLeft="@dimen/_10sdp"
                                        android:layout_marginTop="@dimen/_20sdp"
                                        android:text="@string/please_proceed"></TextView>


                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/_10sdp"
                                        android:layout_marginTop="@dimen/_30sdp"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:layout_width="match_parent"
                                            android:layout_height="@dimen/_30sdp"
                                            android:layout_gravity="center"
                                            android:layout_weight="8"
                                            android:scaleType="fitXY"
                                            android:src="@drawable/icon_password"></ImageView>

                                        <EditText
                                            android:id="@+id/emailET"
                                            style="@style/editTextStyle"
                                            android:background="@android:color/transparent"
                                            android:hint="@string/email"
                                            android:inputType="textEmailAddress"></EditText>

                                    </LinearLayout>

                                    <View
                                        android:layout_width="match_parent"
                                        android:layout_height="1dp"
                                        android:layout_marginLeft="@dimen/_10sdp"
                                        android:layout_marginRight="@dimen/_10sdp"
                                        android:background="#000"></View>


                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/_10sdp"
                                        android:layout_marginTop="@dimen/_10sdp"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:layout_width="match_parent"
                                            android:layout_height="@dimen/_30sdp"
                                            android:layout_gravity="center"
                                            android:layout_weight="8"
                                            android:scaleType="fitXY"
                                            android:src="@drawable/icon_email"></ImageView>

                                        <EditText
                                            android:id="@+id/passwordET"
                                            style="@style/editTextStyle"
                                            android:background="@android:color/transparent"
                                            android:hint="@string/password"
                                            android:inputType="textPassword"></EditText>

                                    </LinearLayout>

                                    <View
                                        android:layout_width="match_parent"
                                        android:layout_height="1dp"
                                        android:layout_marginLeft="@dimen/_10sdp"
                                        android:layout_marginRight="@dimen/_10sdp"
                                        android:background="#000"></View>


                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">

                                        <TextView
                                            android:id="@+id/forgotTV"
                                            style="@style/textStyleSmall"
                                            android:layout_alignParentEnd="true"
                                            android:layout_alignParentRight="true"
                                            android:layout_marginTop="@dimen/_10sdp"
                                            android:layout_marginRight="@dimen/_10sdp"
                                            android:text="@string/forgot"></TextView>

                                    </RelativeLayout>


                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:paddingVertical="@dimen/_20sdp">

                                        <RelativeLayout
                                            android:layout_width="@dimen/_50sdp"
                                            android:layout_height="@dimen/_50sdp"
                                            android:layout_alignParentEnd="true"
                                            android:layout_alignParentRight="true"
                                            android:layout_marginRight="@dimen/_10sdp">

                                            <RelativeLayout
                                                android:id="@+id/loginRL"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:background="@drawable/curculer_view">

                                                <ImageView
                                                    android:layout_width="@dimen/_30sdp"
                                                    android:layout_height="@dimen/_30sdp"
                                                    android:layout_centerInParent="true"
                                                    android:src="@drawable/ic_baseline_check_24"></ImageView>

                                            </RelativeLayout>


                                        </RelativeLayout>


                                    </RelativeLayout>

                                </LinearLayout>


                            </androidx.cardview.widget.CardView>


                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_20sdp"
                                android:background="#ffffff">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        style="@style/textStyleSmall"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="@dimen/_10sdp"
                                        android:text="@string/do_not_have_admin_account_yet"></TextView>


                                    <TextView
                                        style="@style/textStyleSmall"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="@dimen/_10sdp"
                                        android:text="@string/make_free_account"></TextView>

                                    <RelativeLayout
                                        android:id="@+id/createaccountTV"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginHorizontal="@dimen/_20sdp"
                                        android:layout_marginTop="@dimen/_10sdp"
                                        android:background="@drawable/rectangle_button"
                                        android:paddingVertical="@dimen/_5sdp">

                                        <TextView
                                            style="@style/textStyle"
                                            android:layout_centerInParent="true"
                                            android:paddingVertical="@dimen/_5sdp"
                                            android:text="@string/create_account"
                                            android:textAllCaps="true"></TextView>

                                    </RelativeLayout>

                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="@dimen/_10sdp"></RelativeLayout>

                                </LinearLayout>


                            </androidx.cardview.widget.CardView>

                        </LinearLayout>


                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerInParent="true"
                            android:visibility="gone"></ProgressBar>

                    </RelativeLayout>


                </LinearLayout>

            </ScrollView>

        </LinearLayout>


    </LinearLayout>
</layout>